samples/_failures_safe/1761394464_a37200_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9c2173c1.c: In function ‘main’:
./samples/SAFE/__tmp_9c2173c1.c:166:5: error: expected expression at end of input
  166 |     print_tokens(tokens,
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_9c2173c1.c:166:5: error: expected declaration or statement at end of input
